# EasyImports

./: LICENSE  README.md  ei2.py  setup.cfg
.github/workflows/: codeql-analysis.yml
src/EasyImports/: easyimports.py
src/EasyImports.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
