[metadata]
name = EasyImports
version = 0.0.2
author = Skagames
author_email = support@skahosting.xyz
description = A python package to import files from an adjacent folder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Skagames/EasyImports
project_urls =
    Bug Tracker = https://github.com/Skagames/EasyImports/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
